package tritium;

import "instruction.proto";

message Function {
	optional string name = 1;

	// Linked
	optional int32 type_id = 2;
	optional int32 return_type_id = 3;
	optional int32 opens_type_id = 4;

	// Only informative post-linking
	optional bool built_in = 5;

	repeated Argument args = 6;

	// Only for non-built-in functions
	optional Instruction instruction = 7;

	message Argument {
		optional int32 type_id = 1;
	}
}