package tritium;

message Instruction {
	required InstructionType type = 1;
	optional string value = 2;
	 // only used if we are an import and we're all linked into an Executable
	optional int32 object_id = 3;

	repeated Instruction children = 4;
	repeated Instruction arguments = 5;

	// Linked: Function Reference
	// Until this happens, value says the function call name
	optional int32 function_id = 6;
	
	optional int32 line_number = 7;

	enum InstructionType {
		BLOCK = 0;
		FUNCTION_CALL = 1;
		IMPORT = 2;
		TEXT = 3;
		LOCAL_VAR = 4;
		POSITION = 5;
	}
}